--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bucharestschoolofai.github.io",
+  "homepage": "https://bucharestschoolofai.github.io/feedback",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.24",
     "@fortawesome/free-solid-svg-icons": "^5.11.1",
@@ -10,9 +10,15 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
+    "jquery": "^3.4.1",
+    "popper": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-is": "^16.9.0",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
